Fix quick controls z-index and add quick fade shortcut

--- a/source/stylesheets/control/control.scss
+++ b/source/stylesheets/control/control.scss
@@ -104,6 +104,8 @@ body {
 
   right: 10px;
   top: 10px;
+
+  z-index: 2;
 }
 
 #quick-controls .btn {
